src/main/java/com/example/jobhunter_myself/util/error/StorageException.java
package com.example.jobhunter_myself.util.error;

public class StorageException extends Exception {
    // Constructor that accepts a message
    public StorageException(String message) {
        super(message);
    }
}